; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igbvf/extr_netdev.c_igbvf_intr_msix_rx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igbvf/extr_netdev.c_igbvf_intr_msix_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.igbvf_adapter = type { %struct.TYPE_4__*, i64, i64, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32, i64, i64, i32 }
%struct.TYPE_3__ = type { i64 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @igbvf_intr_msix_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @igbvf_intr_msix_rx(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.igbvf_adapter*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.net_device*
  store %struct.net_device* %8, %struct.net_device** %5, align 8
  %9 = load %struct.net_device*, %struct.net_device** %5, align 8
  %10 = call %struct.igbvf_adapter* @netdev_priv(%struct.net_device* %9)
  store %struct.igbvf_adapter* %10, %struct.igbvf_adapter** %6, align 8
  %11 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %12 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %11, i32 0, i32 4
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 8
  %15 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %16 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %42

21:                                               ; preds = %2
  %22 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %23 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %22, i32 0, i32 0
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %28 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %27, i32 0, i32 3
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %32 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %31, i32 0, i32 0
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %30, %35
  %37 = call i32 @writel(i32 %26, i64 %36)
  %38 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %39 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %38, i32 0, i32 0
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  store i64 0, i64* %41, align 8
  br label %42

42:                                               ; preds = %21, %2
  %43 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %44 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %43, i32 0, i32 0
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 0
  %47 = call i64 @napi_schedule_prep(i32* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %59

49:                                               ; preds = %42
  %50 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %51 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %50, i32 0, i32 2
  store i64 0, i64* %51, align 8
  %52 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %53 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %52, i32 0, i32 1
  store i64 0, i64* %53, align 8
  %54 = load %struct.igbvf_adapter*, %struct.igbvf_adapter** %6, align 8
  %55 = getelementptr inbounds %struct.igbvf_adapter, %struct.igbvf_adapter* %54, i32 0, i32 0
  %56 = load %struct.TYPE_4__*, %struct.TYPE_4__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %56, i32 0, i32 0
  %58 = call i32 @__napi_schedule(i32* %57)
  br label %59

59:                                               ; preds = %49, %42
  %60 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %60
}

declare dso_local %struct.igbvf_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i64 @napi_schedule_prep(i32*) #1

declare dso_local i32 @__napi_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
